--- a/src/scss/bootstrap/_card.scss
+++ b/src/scss/bootstrap/_card.scss
@@ -11,7 +11,8 @@
   background-color: $card-bg;
   background-clip: border-box;
   border: $card-border-width solid $card-border-color;
-  @include border-radius($card-border-radius);
+  //@include border-radius($card-border-radius);
+  margin-bottom:10px;
 
   > hr {
     margin-right: 0;
@@ -68,12 +69,12 @@
 .card-header {
   padding: $card-spacer-y $card-spacer-x;
   margin-bottom: 0; // Removes the default margin-bottom of <hN>
-  background-color: $card-cap-bg;
+  background-color: white;
   border-bottom: $card-border-width solid $card-border-color;
 
-  &:first-child {
-    @include border-radius($card-inner-border-radius $card-inner-border-radius 0 0);
-  }
+  //&:first-child {
+  //  @include border-radius($card-inner-border-radius $card-inner-border-radius 0 0);
+  //}
 
   + .list-group {
     .list-group-item:first-child {
@@ -87,9 +88,9 @@
   background-color: $card-cap-bg;
   border-top: $card-border-width solid $card-border-color;
 
-  &:last-child {
-    @include border-radius(0 0 $card-inner-border-radius $card-inner-border-radius);
-  }
+  //&:last-child {
+  //  @include border-radius(0 0 $card-inner-border-radius $card-inner-border-radius);
+  //}
 }
 
 
